# mergen_linux

./: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  global.h  global.hpp  main.cpp
aud/: microphone.cpp  microphone.h  microphone.hpp  speaker.cpp  speaker.hpp
hpt/: touchpad.cpp  touchpad.h  touchpad.hpp
vis/: .gitignore  binary_integers.hpp  bitmap.h  bitmap.hpp  camera.cpp  camera.h  camera.hpp  edge_detection.cpp  edge_detection.hpp  global.hpp  memory.cpp  memory.hpp  perception.hpp  segment.hpp  segmentation.cpp  segmentation.h  segmentation.hpp  videodev2.hpp  visual_ltm.cpp  visual_ltm.hpp  visual_stm.cpp  visual_stm.h  visual_stm.hpp
